<resources>
    <string name="app_name">PlutonTestMVVM</string>
    <string name="welcomeMsg">Welcome To Plutomen Technologies Test </string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="noAccount">Don\'t Have Account</string>
    <string name="createNewAccount">Create New Account</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="takePhoto">Take Photo</string>
    <string name="choosePhoto">Choose Photo</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="viewAll">View All</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="allUserDetails">All User Details</string>
</resources>