<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.example.plutontestmvvm.home.HomeViewModel" />

        <variable
            name="view"
            type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".home.HomeActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_begin="@dimen/dp_20"
            android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_end="@dimen/dp_20"
            android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glBtnCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent=".50"
            android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_begin="@dimen/dp_50"
            android:orientation="horizontal"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivProfile"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_100"
            android:onClick="@{()->viewModel.onProfileImgClick()}"
            app:layout_constraintTop_toTopOf="@+id/glTop"
            app:layout_constraintStart_toStartOf="@+id/glStart"
            app:layout_constraintEnd_toEndOf="@+id/glEnd"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivEdit"
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            app:srcCompat="@drawable/ic_edit"
            android:padding="@dimen/dp_5"
            android:background="@drawable/round_bg"
            android:onClick="@{()->viewModel.onProfileImgClick()}"
            app:layout_constraintBottom_toBottomOf="@+id/ivProfile"
            app:layout_constraintEnd_toEndOf="@+id/ivProfile"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilFirstName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:hint="@string/firstName"
            app:layout_constraintEnd_toEndOf="@id/glEnd"
            app:layout_constraintStart_toStartOf="@id/glStart"
            app:layout_constraintTop_toBottomOf="@+id/ivProfile">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firstName"
                android:text="@{viewModel.mFirstName}"
                android:inputType="textPersonName"
                android:onTextChanged="@{viewModel::onTextChangeFirstName}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilLastName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:hint="@string/lastName"
            app:layout_constraintEnd_toEndOf="@id/glEnd"
            app:layout_constraintStart_toStartOf="@id/glStart"
            app:layout_constraintTop_toBottomOf="@+id/tilFirstName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastName"
                android:text="@{viewModel.mLastName}"
                android:inputType="textPersonName"
                android:onTextChanged="@{viewModel::onTextChangeLastName}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:hint="@string/email"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/glEnd"
            app:layout_constraintStart_toStartOf="@id/glStart"
            app:layout_constraintTop_toBottomOf="@+id/tilLastName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:text="@{viewModel.mEmail}"
                android:inputType="textEmailAddress"
                android:onTextChanged="@{viewModel::onTextChangeEmail}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="@id/glEnd"
            app:layout_constraintStart_toStartOf="@id/glStart"
            app:layout_constraintTop_toBottomOf="@+id/tilEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:text="@{viewModel.mPassword}"
                android:inputType="textPassword"
                android:onTextChanged="@{viewModel::onTextChangePassword}" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnEdit"
            style="@style/text_20sp_white_hind_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@color/colorPrimary"
            android:paddingStart="@dimen/dp_16"
            android:paddingEnd="@dimen/dp_16"
            android:text="@string/edit"
            android:textAllCaps="false"
            android:onClick="@{()->viewModel.onEditClick()}"
            app:layout_constraintEnd_toEndOf="@id/glEnd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/glBtnCenter"
            app:layout_constraintTop_toBottomOf="@+id/tilPassword" />

        <Button
            android:id="@+id/btnDelete"
            style="@style/text_20sp_white_hind_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@color/colorPrimary"
            android:paddingStart="@dimen/dp_16"
            android:paddingEnd="@dimen/dp_16"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:onClick="@{()->viewModel.onDeleteClick()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/glBtnCenter"
            app:layout_constraintTop_toBottomOf="@+id/tilPassword" />

        <Button
            android:id="@+id/btnViewAll"
            style="@style/text_20sp_white_hind_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@color/colorPrimary"
            android:paddingStart="@dimen/dp_16"
            android:paddingEnd="@dimen/dp_16"
            android:text="@string/viewAll"
            android:textAllCaps="false"
            android:onClick="@{()->viewModel.onViewAllClick()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/glBtnCenter"
            app:layout_constraintTop_toBottomOf="@+id/btnEdit" />

        <Button
            android:id="@+id/btnLogout"
            style="@style/text_20sp_white_hind_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@color/colorPrimary"
            android:paddingStart="@dimen/dp_16"
            android:paddingEnd="@dimen/dp_16"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:onClick="@{()->viewModel.onLogoutClick()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/glBtnCenter"
            app:layout_constraintTop_toBottomOf="@+id/btnEdit" />

        <Button
            android:id="@+id/btnSave"
            style="@style/text_20sp_white_hind_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@color/colorPrimary"
            android:paddingStart="@dimen/dp_16"
            android:paddingEnd="@dimen/dp_16"
            android:text="@string/save"
            android:textAllCaps="false"
            android:onClick="@{()->viewModel.onSaveClick()}"
            app:layout_constraintEnd_toEndOf="@id/glEnd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/glBtnCenter"
            app:layout_constraintTop_toBottomOf="@+id/tilPassword" />

        <Button
            android:id="@+id/btnCancel"
            style="@style/text_20sp_white_hind_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@color/colorPrimary"
            android:paddingStart="@dimen/dp_16"
            android:paddingEnd="@dimen/dp_16"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:onClick="@{()->viewModel.onCancelClick()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/glBtnCenter"
            app:layout_constraintTop_toBottomOf="@+id/tilPassword" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/gpAllBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="btnDelete,btnEdit,btnViewAll,btnLogout"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/gpUpdateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="btnSave,btnCancel"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:progressTint="@color/colorPrimary"
            android:visibility="@{viewModel.isProgressBarVisible == true ? view.VISIBLE : view.GONE}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>